change button to login sign in

--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -17,8 +17,8 @@
                 <label for="pword">Password</label>
                 <input type="password" class="password" placeholder="Password" required>
                 <div class="left font12"><a href="forget-password.html">Forget Password</a></div>
-                <button id="login" type="submit">Login</button>
-                <div class="center font12">Don't have an account? <a href="sign-up.html">Sign in</a></div><br/>
+                <button id="login" type="submit">Sign in</button>
+                <div class="center font12">Don't have an account? <a href="sign-up.html">Sign up</a></div><br/>
                 <div class="error font12">Error
                 </div>
             </div>
