--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -6,16 +6,16 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <form method="POST" action="/dashboard">
+        <form method="POST" action="dashboard.html">
             <div class="container">
                 <div class="imgcontainer">
                     <img src="avatar.png" alt="Avatar" class="avatar">
                 </div>
                 <label for="email">Username or Email</label>
-                <input type="text" class="username" placeholder="JohnDeo" required><br/>
+                <input type="text" id="username" placeholder="JohnDeo" required><br/>
                 
                 <label for="pword">Password</label>
-                <input type="password" class="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="Password" required>
                 <div class="left font12"><a href="forget-password.html">Forget Password</a></div>
                 <button id="login" type="submit">Sign in</button>
                 <div class="center font12">Don't have an account? <a href="sign-up.html">Sign up</a></div><br/>
