renamed app.js to signin.js

--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -23,6 +23,6 @@
                 </div>
             </div>
         </form>
-        <script src="app.js"></script>
+        <script src="js/signin.js"></script>
     </body>
 </html>
