minor bug fixes

--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -19,7 +19,7 @@
                 <div class="left font12"><a href="forget-password.html">Forget Password</a></div>
                 <button id="login" type="submit">Sign in</button>
                 <div class="center font12">Don't have an account? <a href="sign-up.html">Sign up</a></div><br/>
-                <div class="error font12">Error
+                <div class="error font12">
                 </div>
             </div>
         </form>
