--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -11,21 +11,23 @@
                     <img src="avatar.png" alt="Avatar" class="avatar">
                 </div>
                 <label for="email">Email</label>
-                <input type="email" placeholder="JohnDeo@gmail.com" required> 
+                <input type="email" id="email" placeholder="JohnDeo@gmail.com" required> 
 
-                <label for="email">Username</label>
-                <input type="email" placeholder="JohnDeo" required> 
+                <label for="username">Username</label>
+                <input type="text" id="username" placeholder="JohnDeo" required> 
                 
                 <label for="pword">Password</label>
-                <input type="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="Password" required>
 
                 <label for="pword">Retype Password</label>
-                <input type="password" placeholder="Password" required>
+                <input type="password" id="confirmpassword" placeholder="Password" required>
                 
-                <button type="submit">Register</button>
-                <div class="center font12">Already have an Account? <a href="sign-in.html">Sign in</a></div>
+                <button id="signup" type="submit">Sign up</button>
+                <div class="center font12">Already have an Account? <a href="sign-in.html">Sign in</a></div><br/>
+                <div class="error font12">
+                </div>
             </div>
         </form>
-        <script scr="app.js"></script>
+        <script src="js/signup.js"></script>
     </body>
 </html>
