forget password integration

--- a/UI/forget.html
+++ b/UI/forget.html
@@ -9,11 +9,13 @@
             <div class="container">
                 <div>
                     <label for="email">Email</label>
-                    <input type="email" name="email" required> 
+                    <input type="email" id="email" required> 
                 </div>
                                 
-                <button type="submit">Reset Password</button>
+                <button id="forget" type="submit">Reset Password</button><br/>
+                <div class="error font12">
                 </div>
+            </div>
         </form>
         <script src="js/forget.js"></script>
     </body>
