design questions view

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="add-meetup">
       <label for="topic">Topic</label>
       <input type="text" id="topic" placeholder="Andela Bootcamp" required>
 
@@ -29,6 +29,11 @@
     <button id="btnmeetup" type="submit">Add meetup</button><br/>
     <div class="error font12"></div>
   </div>
+
+    <div class="container flex" id="meetups">
+      <img class="image sm" src="andela.jpg">
+      <h1>Jesus</h1>
+    </div>
   
   <script src="js/admin.js"></script>
 </body>
