--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -16,7 +16,7 @@
                 
                 <label for="pword">Password</label>
                 <input type="password" id="password" placeholder="Password" required>
-                <div class="left font12"><a href="forget-password.html">Forget Password</a></div>
+                <div class="left font12"><a href="forget.html">Forget Password</a></div>
                 <button id="login" type="submit">Sign in</button>
                 <div class="center font12">Don't have an account? <a href="sign-up.html">Sign up</a></div><br/>
                 <div class="error font12">
