--- a/UI/index.html
+++ b/UI/index.html
@@ -11,28 +11,43 @@
 <body>
   <header>
     <div class="header">
-      <a href="#default" class="logo"><img class="image sm" src="logo1.png"></a>
+      <a href="#" class="logo"><img class="image sm" src="logo1.png"></a>
       <div class="header-right">
-        <a class="active" href="#home">Home</a>
+        <a class="active" href="#">Home</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
-        <a href="#Dashboard">Dashboard</a>
+        <a href="sign-in.html">Sign in</a>
       </div>
     </div>
   </header>
   <div id="banner">
 
   </div>
-  <div class="row">
+  <div class="row" id="about"> 
     <div class="column">
       <h1 class="center">About Us</h1>
-      <p align="justify">Questioner helps the meetup organizer prioritize
-          questions to be answered. Other users can vote on asked questions and they bubble to the top
-          or bottom of the log.
-          </p>
+      <p>
+        Questioner is designed to help meetup organizer prioritize questions to be answered. Other users can vote on asked questions and they bubble to the top or bottom of the log.
+      </p>
     </div>
-    <div class="column">
+    <div class="column" id="contact">
       <h1 class="center">Contact Us</h1>
+      <div class="container">
+        <label for="name">Your Name</label>
+        <input type="text" id="name">
+
+        <label for="email">Your Email</label>
+        <input type="email" id="email">
+
+        <label for="subject">Subject</label>
+        <input type="text" id="subject">
+
+        <label for="message">Message</label>
+        <input type="text" id="message">
+
+        <button type="button" id="send">Send</button>
+        <div class="error font12"></div>
+      </div>
     </div>
   </div>
   <p></p>
