added header and footer

--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -6,6 +6,17 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <header>
+            <div class="header">
+                <a href="#" class="logo"><img class="image sm" src="logo1.png"></a>
+                <div class="header-right">
+                <a class="active" href="#">Home</a>
+                <a href="#contact">Contact</a>
+                <a href="#about">About</a>
+                <a href="sign-in.html">Sign in</a>
+                </div>
+            </div>
+        </header>
         <form method="POST" action="dashboard.html">
             <div class="container">
                 <div class="imgcontainer">
@@ -23,6 +34,9 @@
                 </div>
             </div>
         </form>
+        <footer>
+            <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
+        </footer>
         <script src="js/signin.js"></script>
     </body>
 </html>
