added header and footer in all pages and all images in image folder

--- a/UI/index.html
+++ b/UI/index.html
@@ -11,11 +11,12 @@
 <body>
   <header>
     <div class="header">
-      <a href="#" class="logo"><img class="image sm" src="logo1.png"></a>
+      <a href="#" class="logo"><img class="image sm" src="image/logo1.png"></a>
       <div class="header-right">
         <a class="active" href="#">Home</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
+        <a href="meetup.html">Meetups</a>
         <a href="sign-in.html">Sign in</a>
       </div>
     </div>
