--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -6,10 +6,22 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <header>
+            <div class="header">
+                <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
+                <div class="header-right">
+                <a href="index.html">Home</a>
+                <a href="index.html#contact">Contact</a>
+                <a href="index.html#about">About</a>
+                <a href="meetup.html">Meetups</a>
+                <a class="active" href="#">Sign in</a>
+                </div>
+            </div>
+        </header>
         <form method="POST" action="dashboard.html">
             <div class="container">
                 <div class="imgcontainer">
-                    <img src="avatar.png" alt="Avatar" class="avatar">
+                    <img src="image/avatar.png" alt="Avatar" class="avatar">
                 </div>
                 <label for="email">Username or Email</label>
                 <input type="text" id="username" placeholder="JohnDeo" required><br/>
@@ -23,6 +35,9 @@
                 </div>
             </div>
         </form>
+        <footer>
+            <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
+        </footer>
         <script src="js/signin.js"></script>
     </body>
 </html>
