--- a/UI/user.html
+++ b/UI/user.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Questioner | User-Dashboard</title>
+  <title>Questioner | User-Dashboard </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
   <header>
     <div class="header">
-      <a href="#" class="logo"><img class="image sm" src="logo1.png"></a>
+      <a href="#" class="logo"><img class="image sm" src="image/logo1.png"></a>
       <div class="header-right">
         <a href="index.html">Home</a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
+        <a href="meetup.html">Meetups</a>
         <a class="active" href="">Dashboard</a>
       </div>
     </div>
