--- a/UI/forget.html
+++ b/UI/forget.html
@@ -5,6 +5,18 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <header>
+            <div class="header">
+                <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
+                <div class="header-right">
+                <a href="index.html">Home</a>
+                <a href="index.html#contact">Contact</a>
+                <a href="index.html#about">About</a>
+                <a href="meetup.html">Meetups</a>
+                <a href="sign-in.html">Sign in</a>
+                </div>
+            </div>
+        </header>
         <form action="">
             <div class="container">
                 <div>
@@ -17,6 +29,9 @@
                 </div>
             </div>
         </form>
+        <footer>
+            <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
+        </footer>
         <script src="js/forget.js"></script>
     </body>
 </html>
