--- a/UI/meetup.html
+++ b/UI/meetup.html
@@ -3,44 +3,45 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>>Questioner | Meetups</title>
+  <title>Questioner | Meetups</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
   <header>
     <div class="header">
-      <a href="#" class="logo"><img class="image sm" src="logo1.png"></a>
+      <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
       <div class="header-right">
         <a href="index.html">Home</a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
-        <a class="active" href="">Dashboard</a>
+        <a class="active" href="meetup.html">Meetups</a>
+        <a href="user.html">Dashboard</a>
       </div>
     </div>
   </header>
   <div class="row">
     <div class="col-3">
       <div class="container md">
-        <img class="image" src="andela.jpg">
+        <img class="image" src="image/andela.jpg">
         <h1>Andela Bootcamp</h1>
       </div>
     </div>
     <div class="col-3">
       <div class="container md">
-        <img class="image" src="andela.jpg">
+        <img class="image" src="image/andela.jpg">
       </div>
     </div>
     <div class="col-3">
       <div class="container md">
-        <img class="image" src="andela.jpg">
+        <img class="image" src="image/andela.jpg">
       </div>
     </div>
   </div>
   <div class="row">
       <div class="col-3">
           <div class="container md">
-            <img class="image" src="andela.jpg">
+            <img class="image" src="image/andela.jpg">
             <h1>Andela Bootcamp</h1>
           </div>
         </div>
