--- a/UI/admin.html
+++ b/UI/admin.html
@@ -6,12 +6,11 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <header>
     <div class="header">
-      <a href="" class="logo"><img src="logo1" alt="Company Logo"></a>
+      <a href="" class="logo"><img class="image sm" src="image/logo1.png" alt="Company Logo"></a>
       <div class="header-right">
         <a  href="index.html">Home</a>
         <a href="index.html#contact">Contact</a>
@@ -32,7 +31,7 @@
       
       <div class="image-upload">
         <label for="upload">
-          <img title="Click to upload a file" src="icon.png"/>
+          <img title="Click to upload a file" src="image/icon.png"/>
           <!-- <img src="https://goo.gl/pB9rpQ"/> -->
         </label>
        <input id="upload" type="file"/>
