--- a/UI/forget.html
+++ b/UI/forget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login Form</title>
+        <title>Questioner | Login Form</>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
