--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Login Form</title>
+        <title>Questioner | Login Form</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
