update mobile responsive

--- a/UI/meetup.html
+++ b/UI/meetup.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | Meetups</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
   <header>
@@ -19,32 +20,85 @@
       </div>
     </div>
   </header>
-  <div class="row">
-    <div class="col-3">
-      <div class="container md">
-        <img class="image" src="image/andela.jpg">
-        <h1>Andela Bootcamp</h1>
-      </div>
+  <div class="flex">
+    <div>
+      <img class="image" src="image/andela.jpg">
+      <h4><a href="">Andela's Bootcamp</a></h4>
+      <span class="text-holder">
+        <ul class="details">
+          <li>Feb 29 2017</li>
+          <li>30 comment</li>
+          <li><i class="fas fa-thumbs-up"></i> 100</li>
+          <li><i class="fas fa-thumbs-down"></i> 5</li>
+          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+        </ul>
+      </span>
     </div>
-    <div class="col-3">
-      <div class="container md">
-        <img class="image" src="image/andela.jpg">
-      </div>
+    <div>
+      <img class="image" src="image/andela.jpg">
+      <h4><a href="">Andela's Bootcamp</a></h4>
+      <span class="text-holder">
+        <ul class="details">
+          <li>Feb 29 2017</li>
+          <li>10 comment</li>
+          <li><i class="fas fa-thumbs-up"></i> 50</li>
+          <li><i class="fas fa-thumbs-down"></i> 5</li>
+          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+        </ul>
+      </span>
     </div>
-    <div class="col-3">
-      <div class="container md">
-        <img class="image" src="image/andela.jpg">
-      </div>
+    <div>
+      <img class="image" src="image/andela.jpg">
+      <h4><a href="">Andela's Bootcamp</a></h4>
+      <span class="text-holder">
+        <ul class="details">
+          <li>Feb 29 2017</li>
+          <li>7 comment</li>
+          <li><i class="fas fa-thumbs-up"></i> 30</li>
+          <li><i class="fas fa-thumbs-down"></i> 8</li>
+          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+        </ul>
+      </span>
     </div>
-  </div>
-  <div class="row">
-      <div class="col-3">
-          <div class="container md">
-            <img class="image" src="image/andela.jpg">
-            <h1>Andela Bootcamp</h1>
-          </div>
-        </div>
-  </div>
+    <div>
+      <img class="image" src="image/andela.jpg">
+      <h4><a href="">Andela's Bootcamp</a></h4>
+      <span class="text-holder">
+        <ul class="details">
+          <li>Feb 29 2017</li>
+          <li>2 comment</li>
+          <li><i class="fas fa-thumbs-up"></i> 20</li>
+          <li><i class="fas fa-thumbs-down"></i> 5</li>
+          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+        </ul>
+      </span>
+    </div>
+    <div>
+      <img class="image" src="image/andela.jpg">
+      <h4><a href="">Andela's Bootcamp</a></h4>
+      <span class="text-holder">
+        <ul class="details">
+          <li>Feb 29 2017</li>
+          <li>2 comment</li>
+          <li><i class="fas fa-thumbs-up"></i> 20</li>
+          <li><i class="fas fa-thumbs-down"></i> 5</li>
+          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+        </ul>
+      </span>
+    </div>
+    <div>
+      <img class="image" src="image/andela.jpg">
+      <h4><a href="">Andela's Bootcamp</a></h4>
+      <span class="text-holder">
+        <ul class="details">
+          <li>Feb 29 2017</li>
+          <li>2 comment</li>
+          <li><i class="fas fa-thumbs-up"></i> 20</li>
+          <li><i class="fas fa-thumbs-down"></i> 5</li>
+          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+        </ul>
+      </span>
+    </div>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
