--- a/UI/index.html
+++ b/UI/index.html
@@ -22,16 +22,22 @@
   <div id="banner">
 
   </div>
-  <div class="row" id="about"> 
-    <div class="column">
-      <h1 class="center">About Us</h1>
-      <p>
-        Questioner is designed to help meetup organizer prioritize questions to be answered. Other users can vote on asked questions and they bubble to the top or bottom of the log.
+  <div class="flex no-border" id="about"> 
+    <div>
+      <h1>Need to use Questioner and have to idea of where to start?</h1>
+      <p class="font16 center">
+          At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you prioritize questions for your meetup
       </p>
+      <p class="font16 center">
+        With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
+      </p>
+      <form method="post" action="sign-in.html">
+        <button type="submit">Get Started</button>
+      </form>
     </div>
-    <div class="column" id="contact">
-      <h1 class="center">Contact Us</h1>
-      <div class="container">
+    <div id="contact">
+      <h1>Contact Us</h1>
+      <div class="container sm">
         <label for="name">Your Name</label>
         <input type="text" id="name">
 
@@ -43,7 +49,6 @@
 
         <label for="message">Message</label>
         <input type="text" id="message">
-
         <button type="button" id="send">Send</button>
         <div class="error font12"></div>
       </div>
