--- a/UI/index.html
+++ b/UI/index.html
@@ -32,7 +32,7 @@
         With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
       </p>
       <form method="post" action="sign-in.html">
-        <button type="submit">Get Started</button>
+        <button class="md" type="submit">Get Started</button>
       </form>
     </div>
     <div id="contact">
@@ -48,7 +48,7 @@
         <input type="text" id="subject">
 
         <label for="message">Message</label>
-        <input type="text" id="message">
+        <input type="text" id="message"><br>
         <button type="button" id="send">Send</button>
         <div class="error font12"></div>
       </div>
