--- a/UI/admin.html
+++ b/UI/admin.html
@@ -44,72 +44,78 @@
   <div class="flex" id="meetups">
     <div>
       <img class="image" src="image/andela.jpg">
-      <h4><a href="">Andela's Bootcamp</a></h4>
+      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+      <h6 class="font12">@Epic Tower</h6>
       <span class="text-holder">
-        <ul class="details">
+        <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <li title="view"><a href="#"><i class="fas fa-arrow-right"></i></a></li>
+          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
-      <h4><a href="">Andela's Bootcamp</a></h4>
+      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+      <h6 class="font12">@Epic Tower</h6>
       <span class="text-holder">
-        <ul class="details">
+        <ul class="details font12">
           <li>Feb 29 2017</li>
-          <li>10 Questions</li>
-          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+          <li>30 Questions</li>
+          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
-      <h4><a href="">Andela's Bootcamp</a></h4>
+      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+      <h6 class="font12">@Epic Tower</h6>
       <span class="text-holder">
-        <ul class="details">
+        <ul class="details font12">
           <li>Feb 29 2017</li>
-          <li>7 Questions</li>
-          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+          <li>30 Questions</li>
+          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
-      <h4><a href="">Andela's Bootcamp</a></h4>
+      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+      <h6 class="font12">@Epic Tower</h6>
       <span class="text-holder">
-        <ul class="details">
+        <ul class="details font12">
           <li>Feb 29 2017</li>
-          <li>2 Questions</li>
-          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+          <li>30 Questions</li>
+          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
-      <h4><a href="">Andela's Bootcamp</a></h4>
+      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+      <h6 class="font12">@Epic Tower</h6>
       <span class="text-holder">
-        <ul class="details">
+        <ul class="details font12">
           <li>Feb 29 2017</li>
-          <li>2 Questions</li>
-          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+          <li>30 Questions</li>
+          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
-      <h4><a href="">Andela's Bootcamp</a></h4>
+      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+      <h6 class="font12">@Epic Tower</h6>
       <span class="text-holder">
-        <ul class="details">
+        <ul class="details font12">
           <li>Feb 29 2017</li>
-          <li>2 Questions</li>
-          <li title="view"><a href=""><i class="fas fa-arrow-right"></i></a></li>
+          <li>30 Questions</li>
+          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
       </span>
