fix bug in user dashboard

--- a/UI/comment.html
+++ b/UI/comment.html
@@ -12,7 +12,6 @@
     <div class="header">
       <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
       <div class="header-right">
-        <a href="index.html">Home</a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
         <a class="active" href="meetup.html">Meetups</a>
@@ -21,30 +20,62 @@
     </div>
   </header>
   <div class="flex full">
-    <div id="Question">
-      <h4><a href="question.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Comments</li>
-        </ul>
-        <a href="comment.html"><button type="button" class="font12 sm">Add Comment</button></a>
-      </span>
-    </div>
-    <div class="center no-border"><h1>Comments</h1></div>
+      <div id="Question">
+        <h4><a href="question.html">Andela's Bootcamp</a></h4>
+        <h6 class="font12">@Epic Tower</h6>
+        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+        <span class="text-holder">
+          <ul class="details font12">
+            <li>Feb 29 2017</li>
+            <li>30 Comments</li>
+            <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">20</span></a></li>
+            <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
+          </ul>
+          <a href="comment.html"><button type="button" class="font12 sm">Add Comment</button></a>
+        </span>
+      </div>
+      <div class="center no-border"><h1>Comments</h1></div>
       <div id="comments">
         <div>
           <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-          <p class="font16">by Akinremi Olumide</p>
+          <p class="font12">by Akinremi Olumide</p>
           <span class="text-holder">Feb 29 2017</span>
         </div>
         <hr>
         <div>
           <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-          <p class="font16">by Akinremi Olumide</p>
+          <p class="font12">by Akinremi Olumide</p>
           <span class="text-holder">Feb 29 2017</span>
         </div>
+      </div>
+  </div>
+    <div class="flex full">
+    <div id="Question">
+      <h4><a href="question.html">Andela's Bootcamp</a></h4>
+      <h6 class="font12">@Epic Tower</h6>
+      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+      <span class="text-holder">
+        <ul class="details font12">
+          <li>Feb 29 2017</li>
+          <li>30 Comments</li>
+          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">20</span></a></li>
+          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
+        </ul>
+        <a href="comment.html"><button type="button" class="font12 sm">Add Comment</button></a>
+      </span>
+    </div>
+    <div class="center no-border"><h1>Comments</h1></div>
+    <div id="comments">
+      <div>
+        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+        <p class="font12">by Akinremi Olumide</p>
+        <span class="text-holder">Feb 29 2017</span>
+      </div>
+      <hr>
+      <div>
+        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+        <p class="font12">by Akinremi Olumide</p>
+        <span class="text-holder">Feb 29 2017</span>
       </div>
     </div>
   </div>
