--- a/UI/admin.html
+++ b/UI/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Questioner | Admin</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
@@ -14,9 +14,8 @@
       <div class="header-right">
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
-        <a class="active" href="#Dashboard">Dashboard</a>
         <a id="linkMeetups" href="#">All meetups</a>
-        <a id="linkCreate" href="#">Create meetup</a>
+        <a class="active" id="dashboard" href="#Dashboard">Dashboard</a>
       </div>
     </div>
   </header>
@@ -49,9 +48,11 @@
         <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
+          <!-- <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
+          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li> -->
         </ul>
+        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
+        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -65,6 +66,8 @@
           <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
+        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
+        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -78,6 +81,8 @@
           <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
+        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
+        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -91,6 +96,8 @@
           <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
+        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
+        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -104,6 +111,8 @@
           <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
+        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
+        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -117,6 +126,8 @@
           <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
+        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
+        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
   </div>
