--- a/UI/comment.html
+++ b/UI/comment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Questioner | Meetups</title>
+  <title>Questioner | Comment</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
@@ -20,68 +20,42 @@
     </div>
   </header>
   <div class="flex full">
-      <div id="Question">
-        <h4><a href="question.html">Andela's Bootcamp</a></h4>
+      <div id="question">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
         <h6 class="font12">@Epic Tower</h6>
         <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
         <span class="text-holder">
           <ul class="details font12">
             <li>Feb 29 2017</li>
             <li>30 Comments</li>
-            <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">20</span></a></li>
-            <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
           </ul>
-          <a href="comment.html"><button type="button" class="font12 sm">Add Comment</button></a>
+          <a href="comment.html"><button id="showAddComment" type="button" class="font12 sm">Add Comment</button></a>
         </span>
       </div>
-      <div class="center no-border"><h1>Comments</h1></div>
+      <div class="center no-border" ><h1 id="title">Comments</h1></div>
+
       <div id="comments">
-        <div>
-          <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-          <p class="font12">by Akinremi Olumide</p>
-          <span class="text-holder">Feb 29 2017</span>
-        </div>
+        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+        <p class="font12">by Akinremi Olumide</p>
+        <span class="text-holder">Feb 29 2017</span>
+        
         <hr>
-        <div>
-          <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-          <p class="font12">by Akinremi Olumide</p>
-          <span class="text-holder">Feb 29 2017</span>
-        </div>
+        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+        <p class="font12">by Akinremi Olumide</p>
+        <span class="text-holder">Feb 29 2017</span>
       </div>
   </div>
-    <div class="flex full">
-    <div id="Question">
-      <h4><a href="question.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Comments</li>
-          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">20</span></a></li>
-          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
-        </ul>
-        <a href="comment.html"><button type="button" class="font12 sm">Add Comment</button></a>
-      </span>
-    </div>
-    <div class="center no-border"><h1>Comments</h1></div>
-    <div id="comments">
-      <div>
-        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-        <p class="font12">by Akinremi Olumide</p>
-        <span class="text-holder">Feb 29 2017</span>
-      </div>
-      <hr>
-      <div>
-        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
-        <p class="font12">by Akinremi Olumide</p>
-        <span class="text-holder">Feb 29 2017</span>
-      </div>
+  <div class="container" id="add-comment">
+    <label for="title">Comment</label>
+    <textarea id="commentMessage" cols="54" rows="4"></textarea>
+    <div class="center">
+      <button type="button" id="btnadd" class="font12 md">Add Question</button>
+      <button type="button" id="btncancel" class="font12 md">Cancel</button>
     </div>
   </div>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
-  <script src="js/meetup.js"></script>
+  <script src="js/comment.js"></script>
 </body>
 </html>
