--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Questioner | Login Form</title>
+        <title>Questioner | Signin Form</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
