--- a/UI/user.html
+++ b/UI/user.html
@@ -6,13 +6,13 @@
   <title>Questioner | User-Dashboard </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
   <header>
     <div class="header">
       <a href="#" class="logo"><img class="image sm" src="image/logo1.png"></a>
       <div class="header-right">
-        <a href="index.html">Home</a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
         <a href="meetup.html">Meetups</a>
@@ -20,15 +20,39 @@
       </div>
     </div>
   </header>
-  <div class="row">
-    <div class="col-3">
-      <div class="container sm center"><p>7 Posts</p></div>
+  <div class="flex">
+    <div><p class="lg font22"><i class="fas fa-user-plus"> 7 Posts</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-comment"> 7 comments</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-users"> 7 upcoming meetups</i></p></div>
+  </div>
+  <div class="flex full">
+    <div class="center no-border">
+      <h1 id="title">Top Questions</h1>
     </div>
-    <div class="col-3">
-      <div class="container sm center"><p>7 Comments</p></div>
-    </div>
-    <div class="col-3">
-      <div class="container sm center"><p>7 Meetups</p></div>
+    <div id="questions">
+      <h4><a href="">What do i need to do to succeed in the bootcamp</a></h4>
+      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+      <p class="font16">by Akinremi Olumide</p>
+      <span class="text-holder">
+        <ul class="details font12">
+          <li>Feb 29 2017</li>
+          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">100</span></a></li>
+          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
+        </ul>
+        <a href="comment.html"><button type="button" class="font12 sm">Comments</button></a>
+      </span>
+      <hr>
+      <h4><a href="">Please i need to know more about the bootcamp</a></h4>
+      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+      <p class="font16">by Akinremi Olumide</p>
+      <span class="text-holder">
+        <ul class="details font12">
+          <li>Feb 29 2017</li>
+          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">50</span></a></li>
+          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
+        </ul>
+        <a href="comment.html"><button type="button" class="font12 sm">Comments</button></a>
+      </span>
     </div>
   </div>
   <footer>
