--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -40,7 +40,7 @@
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
       <span class="text-holder">
-        <ul class="details font12">
+        <ul class="details">
           <li>Feb 29 2017</li>
           <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">100</span></a></li>
           <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
@@ -52,12 +52,12 @@
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
       <span class="text-holder">
-        <ul class="details font12">
+        <ul class="details ">
           <li>Feb 29 2017</li>
           <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">50</span></a></li>
           <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
         </ul>
-        <a href="comment.html"><button type="button" class="font12 sm">Comments</button></a>
+        <a href="comment.html"><button type="button" class="sm">Comments</button></a>
       </span>
     </div>
   </div>
