--- a/UI/meetup.html
+++ b/UI/meetup.html
@@ -23,71 +23,72 @@
     <div>
       <img class="image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
+      <h6>@Epic Tower</h6>
+      <span>
+        <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="font12 sm">View</button></a>
+          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
+      <h6>@Epic Tower</h6>
+      <span>
+        <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="font12 sm">View</button></a>        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="font12 sm">View</button></a>
+          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
+      <h6>@Epic Tower</h6>
+      <span>
+        <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="font12 sm">View</button></a>
+          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
+      <h6>@Epic Tower</h6>
+      <span>
+        <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="font12 sm">View</button></a>
+          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
         </ul>
       </span>
     </div>
     <div>
       <img class="image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
+      <h6>@Epic Tower</h6>
+      <span>
+        <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="font12 sm">View</button></a>
+          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
+        </ul>
+      </span>
+    </div>
+    <div>
+      <img class="image" src="image/andela.jpg">
+      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+      <h6>@Epic Tower</h6>
+      <span>
+        <ul class="details">
+          <li>Feb 29 2017</li>
+          <li>30 Questions</li>
+          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
         </ul>
       </span>
     </div>
