--- a/UI/comment.html
+++ b/UI/comment.html
@@ -35,12 +35,12 @@
       <div class="center no-border" ><h1 id="title">Comments</h1></div>
 
       <div id="comments">
-        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+        <p class="font16"><i class="fas fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur! <i class="fas fa-quote-right"></i></p>
         <p class="font12">by Akinremi Olumide</p>
         <span class="text-holder">Feb 29 2017</span>
         
         <hr>
-        <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+        <p class="font16"><i class="fas fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur! <i class="fas fa-quote-right"></i></p>
         <p class="font12">by Akinremi Olumide</p>
         <span class="text-holder">Feb 29 2017</span>
       </div>
