--- a/UI/index.html
+++ b/UI/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | Home</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
@@ -47,8 +46,8 @@
         <input type="text" id="subject">
 
         <label for="message">Message</label>
-        <input type="text" id="message"><br>
-        <button type="button" id="send">Send</button>
+        <textarea id="message"></textarea>
+        <button type="button" class="md" id="send">Send</button>
         <div class="error font12"></div>
       </div>
     </div>
