--- a/UI/admin.html
+++ b/UI/admin.html
@@ -2,16 +2,22 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | Admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
   <header>
     <div class="header">
-      <a href="" class="logo"><img class="image sm" src="image/logo1.png" alt="Company Logo"></a>
+      <a href="" class="logo"><img class="image sm" src="image/logo.png" alt="Company Logo"></a>
+      <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
+      <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
+        <a href=""></a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
         <a id="linkMeetups" href="#">All meetups</a>
@@ -48,11 +54,9 @@
         <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <!-- <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li> -->
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
+          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
-        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
-        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -63,11 +67,9 @@
         <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
-        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
-        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -78,11 +80,9 @@
         <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
-        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
-        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -93,11 +93,9 @@
         <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
-        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
-        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -108,11 +106,9 @@
         <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
-        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
-        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
     <div>
@@ -123,11 +119,9 @@
         <ul class="details font12">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <li title="view"><a href="meetup-single.html"><i class="fas fa-eye"></i></i></a></li>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
           <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
         </ul>
-        <a href="meetup-single.html"><button class="font12 sm" type="button">View</button></a>
-        <button class="delete font12 sm" type="button">Trash</button>
       </span>
     </div>
   </div>
@@ -135,5 +129,6 @@
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
   <script src="js/admin.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
