--- a/UI/comment.html
+++ b/UI/comment.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | Comment</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
@@ -10,12 +11,15 @@
 <body>
   <header>
     <div class="header">
-      <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
+      <a href="index.html" class="logo"><img class="image sm" src="image/logo.png"></a>
+      <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
+      <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
+        <a href=""></a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
-        <a class="active" href="meetup.html">Meetups</a>
-        <a href="user.html">Dashboard</a>
+        <a href="meetup.html">Meetups</a>
+        <a class="active" href="user.html">Dashboard</a>
       </div>
     </div>
   </header>
@@ -57,5 +61,6 @@
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
   <script src="js/comment.js"></script>
+  <script src="js//index.js"></script>
 </body>
 </html>
