--- a/UI/index.html
+++ b/UI/index.html
@@ -2,16 +2,22 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | Home</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
   <header>
     <div class="header">
-      <a href="#" class="logo"><img class="image sm" src="image/logo1.png"></a>
+      <a href="index.html" class="logo"><img class="image sm" src="image/logo.png"></a>
+      <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
+      <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href=""></a>
+        <a href="index.html#contact">Contact</a>
+        <a href="index.html#about">About</a>
         <a href="meetup.html">Meetups</a>
         <a class="active" href="sign-in.html">Sign in</a>
       </div>
@@ -21,7 +27,7 @@
 
   </div>
   <div class="flex no-border" id="about"> 
-    <div>
+    <div class="no-border">
       <h1>Need to use Questioner and have to idea of where to start?</h1>
       <p class="font16 center">
           At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you prioritize questions for your meetup
@@ -33,17 +39,17 @@
         <button class="md" type="submit">Get Started</button>
       </form>
     </div>
-    <div id="contact">
+    <div id="contact" class="no-border">
       <h1>Contact Us</h1>
       <div class="container sm">
-        <label for="name">Your Name</label>
-        <input type="text" id="name">
+        <!-- <label for="name">Your Name</label>
+        <input type="text" id="name"> -->
 
         <label for="email">Your Email</label>
         <input type="email" id="email">
 
-        <label for="subject">Subject</label>
-        <input type="text" id="subject">
+        <!-- <label for="subject">Subject</label>
+        <input type="text" id="subject"> -->
 
         <label for="message">Message</label>
         <textarea id="message"></textarea>
@@ -56,6 +62,7 @@
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
+  <script src="js/index.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
