--- a/UI/meetup.html
+++ b/UI/meetup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | Meetups</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
@@ -10,12 +11,15 @@
 <body>
   <header>
     <div class="header">
-      <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
+      <a href="index.html" class="logo"><img class="image sm" src="image/logo.png"></a>
+      <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
+      <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
+        <a href=""></a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
         <a class="active" href="meetup.html">Meetups</a>
-        <a href="user.html">Dashboard</a>
+        <a href="sign-in.html">Sign in</a>
       </div>
     </div>
   </header>
@@ -24,11 +28,11 @@
       <img class="image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
       <h6>@Epic Tower</h6>
-      <span>
+      <span class="text-holder">
         <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
         </ul>
       </span>
     </div>
@@ -40,7 +44,7 @@
         <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
         </ul>
       </span>
     </div>
@@ -52,7 +56,7 @@
         <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
         </ul>
       </span>
     </div>
@@ -64,7 +68,7 @@
         <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
         </ul>
       </span>
     </div>
@@ -76,7 +80,7 @@
         <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
         </ul>
       </span>
     </div>
@@ -88,7 +92,7 @@
         <ul class="details">
           <li>Feb 29 2017</li>
           <li>30 Questions</li>
-          <a href="meetup-single.html"><button type="button" class="sm">View</button></a>
+          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
         </ul>
       </span>
     </div>
@@ -96,5 +100,6 @@
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
+  <script src="js/index.js"></script>
 </body>
 </html>
