--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Questioner | Signin Form</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     </head>
     <body>
         <header>
             <div class="header">
-                <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
+                <a href="index.html" class="logo"><img class="image sm" src="image/logo.png"></a>
+                <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
+                <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
                 <div class="header-right">
-                <a href="index.html#contact">Contact</a>
-                <a href="index.html#about">About</a>
-                <a href="meetup.html">Meetups</a>
-                <a class="active" href="#">Sign in</a>
+                    <a href=""></a>
+                    <a href="index.html#contact">Contact</a>
+                    <a href="index.html#about">About</a>
+                    <a href="meetup.html">Meetups</a>
+                    <a class="active" href="sign-in.html">Sign in</a>
                 </div>
             </div>
         </header>
-        <form method="POST" action="dashboard.html">
+        <form method="POST" action="user.html">
             <div class="container">
                 <div class="imgcontainer">
                     <img src="image/avatar.png" alt="Avatar" class="avatar">
@@ -37,5 +44,6 @@
             <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
         </footer>
         <script src="js/signin.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
