--- a/UI/user.html
+++ b/UI/user.html
@@ -2,23 +2,27 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | User-Dashboard</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
-  <header>
-    <div class="header">
-      <a href="index.html" class="logo"><img class="image sm" src="image/logo1.png"></a>
-      <div class="header-right">
-        <a href="index.html#contact">Contact</a>
-        <a href="index.html#about">About</a>
-        <a href="meetup.html">Meetups</a>
-        <a class="active" href="user.html">Dashboard</a>
+    <header>
+      <div class="header">
+        <a href="" class="logo"><img class="image sm" src="image/logo.png" alt="Company Logo"></a>
+        <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
+        <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
+        <div class="header-right">
+          <a href=""></a>
+          <a href="index.html#contact">Contact</a>
+          <a href="index.html#about">About</a>
+          <a href="meetup.html">meetups</a>
+          <a class="active" id="dashboard" href="">Dashboard</a>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
   <div class="flex">
     <div><p class="lg font22"><i class="fas fa-user-plus"> 7 Posts</i></p></div>
     <div><p class="lg font22"><i class="fas fa-comment"> 7 comments</i></p></div>
@@ -58,5 +62,6 @@
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
   </footer>
   <script src="js/meetup.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
